Update 3-2. 프로그래밍 전용 리포트 개발(총 정리).md

--- a/ABAP 심화/3-2. 프로그래밍 전용 리포트 개발(총 정리).md
+++ b/ABAP 심화/3-2. 프로그래밍 전용 리포트 개발(총 정리).md
@@ -6570,5 +6570,458 @@ DELETE ZTSCUSTOM_B03 FROM TABLE gt_scustom.
 </br>
 </br>
 
+## <  핵심 개념 >
+</br>
+
+- **서브스크린 생성시 LAYOUT에 서브스크린 지정 필수**
+- **`MEMORY ID` 는 PARAMETERS, SELECT-OPTIONS에서만 선언 가능 (DATA는 불가능)**
+</br>
+</br>
+
+---
+
+</br>
+
+## < 실습 코드 >
+</br>
+
+### 실습 1
+</br>
+
+- 문제
+- ALV에 DB 테이블 데이터 삽입, 수정, 삭제 실습
+<img width="357" height="426" alt="image" src="https://github.com/user-attachments/assets/74c4ba9f-a621-4675-9072-30952ea8c91b" />
+</br>
+</br>
+</br>
+
+**1) Report program 코드 생성**
+```abap
+REPORT ZBC400_PRACTICE1_B03.
+
+INCLUDE ZBC400_PRACTICE1_B03_TOP.
+INCLUDE ZBC400_PRACTICE1_B03_C01.
+INCLUDE ZBC400_PRACTICE1_B03_O01.
+INCLUDE ZBC400_PRACTICE1_B03_I01.
+INCLUDE ZBC400_PRACTICE1_B03_F01.
+
+START-OF-SELECTION.
+PERFORM set_data.
+CALL SCREEN 100.
+```
+</br>
+
+**2) `TOP` 모듈 생성**
+- 서브스크린 생성시 LAYOUT에 서브스크린 지정 필수
+```abap
+DATA: OK_CODE TYPE sy-ucomm.
+
+DATA: go_docking TYPE REF TO cl_gui_docking_container,
+      go_alv TYPE REF TO cl_gui_alv_grid.
+
+DATA: gs_data TYPE ZTMYCARRIER_B03,
+      gt_data TYPE TABLE OF ZTMYCARRIER_B03,
+      gt_sflight TYPE TABLE OF ZREADSFLIGHT_B03.
+
+DATA gs_layout TYPE lvc_s_layo.
+
+SELECTION-SCREEN BEGIN OF SCREEN 110 AS SUBSCREEN.
+  PARAMETERS: pa_car TYPE ZTMYCARRIER_B03-carrid,
+              pa_con TYPE ZTMYCARRIER_B03-connid,
+              pa_name TYPE ZTMYCARRIER_B03-carrname,
+              pa_cityf TYPE ZTMYCARRIER_B03-cityfrom,
+              pa_airpf TYPE ZTMYCARRIER_B03-airpfrom,
+              pa_cityt TYPE ZTMYCARRIER_B03-cityto,
+              pa_airpt TYPE ZTMYCARRIER_B03-airpto.
+SELECTION-SCREEN END OF SCREEN 110.
+```
+</br>
+
+**3) `C01` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_PRACTICE1_B03_C01
+*&---------------------------------------------------------------------*
+
+CLASS lcl_event_handler DEFINITION.
+  PUBLIC SECTION.
+  CLASS-METHODS: on_toolbar FOR EVENT toolbar
+    OF cl_gui_alv_grid IMPORTING e_object,
+      on_user_command FOR EVENT user_command
+    OF cl_gui_alv_grid IMPORTING e_ucomm.
+  CLASS-METHODS: on_double_click FOR EVENT double_click
+    OF cl_gui_alv_grid IMPORTING ES_ROW_NO.
+ENDCLASS.
+
+CLASS lcl_event_handler IMPLEMENTATION.
+  METHOD on_toolbar.
+    DATA ls_button TYPE STB_BUTTON.
+    ls_button-butn_type = 3.
+    INSERT ls_button INTO TABLE e_object->mt_toolbar.
+
+    CLEAR ls_button.
+    ls_button-function = 'INSERT'.
+    ls_button-icon = ICON_EXPAND.
+    ls_button-butn_type = 0.
+    ls_button-text = 'INSERT'.
+    INSERT ls_button INTO TABLE e_object->mt_toolbar.
+
+    CLEAR ls_button.
+    ls_button-function = 'UPDATE'.
+    ls_button-icon = ICON_INTENSIFY.
+    ls_button-butn_type = 0.
+    ls_button-text = 'UPDATE'.
+    INSERT ls_button INTO TABLE e_object->mt_toolbar.
+
+    CLEAR ls_button.
+    ls_button-function = 'DELETE'.
+    ls_button-icon = ICON_COLLAPSE.
+    ls_button-butn_type = 0.
+    ls_button-text = 'DELETE'.
+    INSERT ls_button INTO TABLE e_object->mt_toolbar.
+  ENDMETHOD.
+
+  METHOD ON_USER_COMMAND.
+    CASE E_UCOMM.
+      WHEN 'INSERT'.
+        PERFORM insert_data.
+      WHEN 'UPDATE'.
+        PERFORM update_data.
+      WHEN 'DELETE'.
+        DATA: lt_select_data TYPE LVC_T_ROW,
+              ls_select_data TYPE LVC_S_ROW.
+
+        CALL METHOD go_alv->get_selected_rows
+          IMPORTING
+            et_index_rows = lt_select_data.
+
+        PERFORM delete_data USING lt_select_data ls_select_data.
+      WHEN OTHERS.
+    ENDCASE.
+    PERFORM refresh_data.
+  ENDMETHOD.
+
+  METHOD on_double_click.
+    CLEAR: gs_data, gt_sflight.
+    READ TABLE gt_data INTO gs_data INDEX es_row_no-row_id.
+    SELECT * FROM sflight
+      INTO TABLE gt_sflight
+      WHERE carrid = gs_data-carrid
+        AND connid = gs_data-connid.
+
+    IF sy-subrc = 0.
+      DATA: gv_car TYPE sflight-carrid,
+      gv_con TYPE sflight-connid.
+      gv_car = gs_data-carrid.
+      gv_con = gs_data-connid.
+      SET PARAMETER ID 'CARID' FIELD gv_car.
+      SET PARAMETER ID 'CONID' FIELD gv_con.
+
+      LEAVE TO TRANSACTION 'ZTPRACTICE1_CALLED'
+      AND SKIP FIRST SCREEN.
+    ELSE.
+      MESSAGE '해당하는 sflight 정보가 없습니다.' TYPE 'E'.
+    ENDIF.
+  ENDMETHOD.
+ENDCLASS.
+```
+</br>
+
+**4) `F01` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_PRACTICE1_B03_F01
+*&---------------------------------------------------------------------*
+
+FORM insert_data .
+  CLEAR gs_data.
+  gs_data-carrid = pa_car.
+  gs_data-connid = pa_con.
+  gs_data-carrname = pa_name.
+  gs_data-cityfrom = pa_cityf.
+  gs_data-airpfrom = pa_airpf.
+  gs_data-cityto = pa_cityt.
+  gs_data-airpto = pa_airpt.
+  gs_data-ernam = sy-uname.
+  gs_data-erdat = sy-datum.
+  gs_data-erzet = sy-uzeit.
+
+  INSERT ZTMYCARRIER_B03 FROM gs_data.
+  IF sy-subrc = 0.
+    PERFORM set_data.
+  ELSE.
+    MESSAGE 'INSERT 실패' TYPE 'E'.
+  ENDIF.
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM update_data .
+  CLEAR gs_data.
+  SELECT SINGLE * FROM ZTMYCARRIER_B03
+    INTO gs_data WHERE carrid = pa_car.
+  gs_data-carrid = pa_car.
+  gs_data-connid = pa_con.
+  gs_data-carrname = pa_name.
+  gs_data-cityfrom = pa_cityf.
+  gs_data-airpfrom = pa_airpf.
+  gs_data-cityto = pa_cityt.
+  gs_data-airpto = pa_airpt.
+  gs_data-aenam = sy-uname.
+  gs_data-aedat = sy-datum.
+  gs_data-aezet = sy-uzeit.
+
+  UPDATE ZTMYCARRIER_B03 FROM gs_data.
+  IF sy-subrc = 0.
+    PERFORM set_data.
+  ELSE.
+    MESSAGE 'UPDATE 실패' TYPE 'E'.
+  ENDIF.
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM delete_data USING lt_select_data TYPE LVC_T_ROW
+                       ls_select_data TYPE LVC_S_ROW.
+  CLEAR gs_data.
+  LOOP AT lt_select_data INTO ls_select_data.
+    READ TABLE gt_data INTO gs_data INDEX ls_select_data-index.
+    DELETE ZTMYCARRIER_B03 FROM gs_data.
+  ENDLOOP.
+  IF sy-subrc = 0.
+    PERFORM set_data.
+  ELSE.
+    MESSAGE 'DELETE 실패' TYPE 'E'.
+  ENDIF.
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM set_data .
+  SELECT * FROM ZTMYCARRIER_B03
+    INTO TABLE gt_data.
+  SORT gt_data BY carrid.
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM refresh_data .
+  CALL METHOD go_alv->refresh_table_display
+    EXCEPTIONS
+      finished       = 1
+      others         = 2.
+ENDFORM.
+```
+</br>
+
+**5) `PBO` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_PRACTICE1_B03_O01
+*&---------------------------------------------------------------------*
+
+MODULE status_0100 OUTPUT.
+ SET PF-STATUS 'S100'.
+ SET TITLEBAR 'T100'.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE init_alv OUTPUT.
+  IF go_docking IS INITIAL.
+    CREATE OBJECT go_docking
+      EXPORTING
+        side      = cl_gui_docking_container=>dock_at_bottom
+        extension = 200
+        repid     = sy-repid
+        dynnr     = sy-dynnr.
+
+    CREATE OBJECT go_alv EXPORTING i_parent = go_docking.
+
+    gs_layout-sel_mode = 'A'.
+    SET HANDLER lcl_event_handler=>on_toolbar FOR go_alv.
+    SET HANDLER lcl_event_handler=>on_user_command FOR go_alv.
+    SET HANDLER lcl_event_handler=>on_double_click FOR go_alv.
+
+    CALL METHOD go_alv->set_table_for_first_display
+      EXPORTING
+        i_structure_name              = 'ZTMYCARRIER_B03'
+        is_layout                     = gs_layout
+      CHANGING
+        it_outtab                     = gt_data
+      EXCEPTIONS
+        invalid_parameter_combination = 1
+        program_error                 = 2
+        too_many_lines                = 3
+        others                        = 4.
+    IF sy-subrc <> 0.
+      MESSAGE '데이터 조회 중 오류 발생' TYPE 'E'.
+    ENDIF.
+  ENDIF.
+
+ENDMODULE.
+```
+</br>
+
+**6) `PAI` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_PRACTICE1_B03_I01
+*&---------------------------------------------------------------------*
+
+MODULE user_command_0100 INPUT.
+  CASE OK_CODE.
+    WHEN 'BACK'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE exit INPUT.
+  CASE OK_CODE.
+    WHEN 'CANCEL'.
+      LEAVE TO SCREEN 0.
+    WHEN 'EXIT'.
+      LEAVE PROGRAM.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+```
+</br>
+
+**7) 결과 확인**
+
+<img width="690" height="272" alt="image" src="https://github.com/user-attachments/assets/4f210c04-e441-4318-aafc-3097d6a80df8" />
+
+</br>
+</br>
+</br>
+</br>
+</br>
+
+### 실습 2
+</br>
+
+- 문제
+- 티코드로 프로그램 이동 실습
+<img width="534" height="244" alt="image" src="https://github.com/user-attachments/assets/b3fe975d-1d3a-4a66-af5a-f1ff20ae632b" />
+</br>
+</br>
+</br>
+
+**1) Report program 코드 생성**
+```abap
+REPORT ZBC400_PRACTICE1_CALLED_B03.
+
+INCLUDE ZBC400_PRACTICE1_CALLED_TOP.
+INCLUDE ZBC400_PRACTICE1_CALLED_O01.
+INCLUDE ZBC400_PRACTICE1_CALLED_I01.
+
+START-OF-SELECTION.
+  CALL SCREEN 100.
+```
+</br>
+
+**2) `TOP` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_PRACTICE1_CALLED_TOP
+*&---------------------------------------------------------------------*
+
+DATA: OK_CODE TYPE sy-ucomm.
+DATA: ZREADSFLIGHT_B03 TYPE TABLE OF sflight.
+
+PARAMETERS: pa_car TYPE sflight-carrid,
+            pa_con TYPE sflight-connid.
+
+GET PARAMETER ID 'CARID' FIELD pa_car.
+GET PARAMETER ID 'CONID' FIELD pa_con.
+
+DATA: go_docking TYPE REF TO cl_gui_docking_container,
+      go_alv TYPE REF TO cl_gui_alv_grid.
+```
+</br>
+
+**3) `PBO` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_PRACTICE1_CALLED_O01
+*&---------------------------------------------------------------------*
+
+MODULE status_0100 OUTPUT.
+ SET PF-STATUS 'S100'.
+ SET TITLEBAR 'T100'.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE init_alv OUTPUT.
+  IF go_docking IS INITIAL.
+    SELECT * FROM sflight
+      INTO TABLE ZREADSFLIGHT_B03
+      WHERE carrid = pa_car
+        AND connid = pa_con.
+
+    CREATE OBJECT go_docking
+      EXPORTING
+        side      = cl_gui_docking_container=>dock_at_bottom
+        extension = 300
+        repid     = sy-repid
+        dynnr     = sy-dynnr.
+    CREATE OBJECT go_alv EXPORTING i_parent = go_docking.
+
+    CALL METHOD go_alv->set_table_for_first_display
+      EXPORTING
+        i_structure_name              = 'SFLIGHT'
+      CHANGING
+        it_outtab                     = ZREADSFLIGHT_B03
+      EXCEPTIONS
+        invalid_parameter_combination = 1
+        program_error                 = 2
+        too_many_lines                = 3
+        others                        = 4.
+    IF sy-subrc <> 0.
+      MESSAGE '데이터 조회 중 오류 발생' TYPE 'E'.
+    ENDIF.
+  ENDIF.
+ENDMODULE.
+```
+</br>
+
+**4) `PAI` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZBC400_PRACTICE1_CALLED_I01
+*&---------------------------------------------------------------------*
+
+MODULE user_command_0100 INPUT.
+  CASE OK_CODE.
+    WHEN 'BACK'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE exit INPUT.
+  CASE OK_CODE.
+    WHEN 'CANCEL'.
+      LEAVE TO SCREEN 0.
+    WHEN 'EXIT'.
+      LEAVE PROGRAM.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+```
+</br>
+
+**5) 결과 확인**
+
+<img width="690" height="281" alt="image" src="https://github.com/user-attachments/assets/9bde7d50-2da6-4698-b117-8cdd08c60e7c" />
+
+
 </br>
 </br>
