--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -1,1 +1,16 @@
+### 1) COMMIT / ROLLBACK 구분 정리
+**1-1) 암묵적 COMMIT**
+- 화면이 변경되거나 프로그램이 비정상 종료될 때 자동 COMMIT
+- RFC(Remote Function Call) 호출 시 / RFC 종료 시 자동 COMMIT
+**1-2) 명시적 COMMIT**
+- ABAP 구문으로 개발자가 직접 COMMIT 실행 : `COMMIT WORK`
+**2-1) 암묵적 ROLLBACK**
+- ABAP 덤프 발생 시 자동 ROLLBACK
+- `MESSAGE TYPE 'A'` 또는 `MESSAGE TYPE 'X'` 발생 시 자동 ROLLBACK
+**2-2) 명시적 ROLLBACK**
+- ABAP 구문으로 개발자가 직접 ROLLBACK 실행 : `ROLLBACK WORK`
+</br>
 
+- 현재 LUW에서 수행된 모든 Open SQL DB 변경을 취소
+- `COMMIT WORK` 이전에 실행된 `INSERT` / `UPDATE` / `DELETE` 를 전부 원상복구
+- `COMMIT WORK` 실행 후에는 DB에 확정 저장되므로 이후 ROLLBACK WORK를 호출해도 되돌릴 수 없음
