Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -20,3 +20,31 @@
 - ABAP 구문으로 개발자가 직접 ROLLBACK 실행 : `ROLLBACK WORK`
   
 </br>
+```abap
+*************** 암묵적 COMMIT ****************
+INSERT ztable FROM gs_data.
+CALL SCREEN 200.     " 화면 전환 발생
+
+INSERT ztable FROM gs_data.
+LEAVE PROGRAM.      " 프로그램 비정상 종료 
+
+INSERT ztable FROM gs_data.
+CALL FUNCTION 'Z_RFC_FUNC'    " RFC 호출 / 종료 
+  DESTINATION 'RFC_DEST'.
+
+*************** 명시적 COMMIT ****************
+INSERT ztable FROM gs_data.
+COMMIT WORK.
+
+*************** 암묵적 ROLLBACK ****************
+INSERT ztable FROM gs_data.    " ABAP Dump 발생 → RUNTIME ERROR 발생
+
+INSERT ztable FROM gs_data.
+MESSAGE 'Fatal Error' TYPE 'A'.   " MESSAGE TYPE A / X 
+
+*************** 명시적 ROLLBACK ****************
+INSERT ztable FROM gs_data.
+IF sy-subrc <> 0.
+  ROLLBACK WORK.
+ENDIF.
+```
