Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -52,4 +52,16 @@ ENDIF.
 </br>
 </br>
 
+### 2) Lock
 - Lock Object 이름은 EY 또는 EZ로 시작해야 함
+</br>
+
+**< Lock actions (동작 종류) >**
+1) Set lock
+- 특정 데이터(키)에 대해 새로운 Lock 설정
+
+2️)Promote optimistic lock
+- 기존 약한 Lock을 더 강한 Lock으로 승격
+
+3️) Check whether lock can be set or promoted
+- 기존 Lock 존재 여부 확인 후 Lock 설정/승격 가능 여부 판단
