Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -67,3 +67,7 @@ ENDIF.
 
 3️) Check whether lock can be set or promoted
 - 기존 Lock 존재 여부 확인 후 Lock 설정/승격 가능 여부 판단
+</br>
+
+- 기존 Lock과 충돌: 다른 세션이 이미 Lock을 보유한 경우 → 예외 FOREIGN_LOCK
+- Lock 관리 오류: 시스템 또는 Lock 서버 문제로 Lock 처리 실패 → 예외 SYSTEM_FAILURE
