--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -54,6 +54,8 @@ ENDIF.
 
 ### 2) Lock
 - Lock Object 이름은 EY 또는 EZ로 시작해야 함
+- 기존 Lock과 충돌: 다른 세션이 이미 Lock을 보유한 경우 → 예외 `FOREIGN_LOCK`
+- Lock 관리 오류: 시스템 또는 Lock 서버 문제로 Lock 처리 실패 → 예외 `SYSTEM_FAILURE`
 </br>
 
 
@@ -67,5 +69,3 @@ ENDIF.
 - 기존 Lock 존재 여부 확인 후 Lock 설정/승격 가능 여부 판단
 </br>
 
-- 기존 Lock과 충돌: 다른 세션이 이미 Lock을 보유한 경우 → 예외 FOREIGN_LOCK
-- Lock 관리 오류: 시스템 또는 Lock 서버 문제로 Lock 처리 실패 → 예외 SYSTEM_FAILURE
