Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -53,6 +53,7 @@ ENDIF.
 </br>
 
 ### 2) Lock
+- 다른 사용자가 같은 데이터를 동시에 수정하지 못하게 막는 장치
 - Lock Object 이름은 EY 또는 EZ로 시작해야 함
 - 기존 Lock과 충돌: 다른 세션이 이미 Lock을 보유한 경우 → 예외 `FOREIGN_LOCK`
 - Lock 관리 오류: 시스템 또는 Lock 서버 문제로 Lock 처리 실패 → 예외 `SYSTEM_FAILURE`
@@ -69,3 +70,30 @@ ENDIF.
 - 기존 Lock 존재 여부 확인 후 Lock 설정/승격 가능 여부 판단
 </br>
 
+```abap
+*************** LOCK 설정 (ENQUEUE) ****************
+CALL FUNCTION 'ENQUEUE_ESFLIGHT'
+  EXPORTING
+    carrid = lv_carrid
+    connid = lv_connid
+    fldate = lv_fldate
+  EXCEPTIONS
+    foreign_lock   = 1
+    system_failure = 2.
+
+CASE sy-subrc.
+  WHEN 0.
+    " Lock 설정 성공
+  WHEN 1.
+    " FOREIGN_LOCK : 다른 세션이 이미 Lock 보유
+  WHEN 2.
+    " SYSTEM_FAILURE : Lock 서버/시스템 오류
+ENDCASE.
+
+*************** LOCK 해제 (DEQUEUE) ****************
+CALL FUNCTION 'DEQUEUE_ESFLIGHT'
+  EXPORTING
+    carrid = lv_carrid
+    connid = lv_connid
+    fldate = lv_fldate.
+```
