--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -1,3 +1,15 @@
+## <  핵심 개념 >
+</br>
+
+- **서브스크린 생성시 LAYOUT에 서브스크린 지정 필수**
+- **`MEMORY ID` 는 PARAMETERS, SELECT-OPTIONS에서만 선언 가능 (DATA는 불가능)**
+</br>
+</br>
+
+---
+
+</br>
+
 ## < ABAP 데이터 무결성 제어 : COMMIT / ROLLBACK / Lock >
 </br>
 
