--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -70,6 +70,9 @@ ENDIF.
 ### 2) Lock
 - 다른 사용자가 같은 데이터를 동시에 수정하지 못하게 막는 장치
 - Lock Object 이름은 EY 또는 EZ로 시작해야 함
+- Lock은 넘겨준 키 값만 정확히 잠그고, 안 넘긴 값은 전부 다 잠근다고 보면 됨
+</br>
+
 - 기존 Lock과 충돌: 다른 세션이 이미 Lock을 보유한 경우 → 예외 `FOREIGN_LOCK`
 - Lock 관리 오류: 시스템 또는 Lock 서버 문제로 Lock 처리 실패 → 예외 `SYSTEM_FAILURE`
 </br>
