--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -33,7 +33,26 @@
   
 **2-2) 명시적 ROLLBACK**
 - ABAP 구문으로 개발자가 직접 ROLLBACK 실행 : `ROLLBACK WORK`
-  
+</br>
+
+| Parameter              | Value        | Meaning |
+|------------------------|-------------|---------|
+| mode_<table_name>      | 'S' / 'W'   | Shared Lock 설정 또는 Lock 가능 여부 체크 |
+|                        | 'O'         | Optimistic Lock 설정 |
+|                        | 'E' / 'V'   | 누적 Exclusive Lock 설정 또는 Lock 가능 여부 체크 |
+|                        | 'X' / 'U'   | 비누적 Exclusive Lock 설정 또는 Lock 가능 여부 체크 |
+|                        | 'R' / 'C'   | Optimistic Lock 승격 또는 승격 가능 여부 체크 |
+| <lock_parameter>       | <val>       | Lock에 사용할 필드 값 |
+| x_<lock_parameter>     | space       | 해당 Lock Parameter 기준으로 Lock (기본값) |
+|                        | 'X'         | 필드 값이 Initial인 테이블 라인에 대해 Lock |
+| _scope                 | '1'         | Lock이 현재 프로그램 내에서만 유지 |
+|                        | '2'         | Lock을 V1 Update Task로 전달 (기본값) |
+|                        | '3'         | 프로그램 + V1 Update Task 모두에 Lock 유지 |
+| _wait                  | space       | 외부 Lock 존재 시 재시도 없이 종료 (기본값) |
+|                        | 'X'         | 외부 Lock 존재 시 한 번 더 Lock 시도 |
+| _collect               | space       | Local Lock Container 없이 Lock 설정 (기본값) |
+|                        | 'X'         | Local Lock Container를 사용하여 Lock 설정 |
+
 </br>
 
 ```abap
