Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -38,8 +38,7 @@
 | Parameter / Mode        | Value        | Meaning |
 |-------------------------|-------------|---------|
 | mode_<table_name>       | 'S' / 'W'   | **Shared Lock** 설정 또는 Lock 가능 여부 체크 → 여러 프로그램에서 추가 Shared Lock 가능 |
-|                         | 'O'         | **Optimistic Lock** 설정 
-→ 여러 프로그램에서 추가 가능, 실제 DB 변경 시 Exclusive(E)로 승격 가능 |
+|                         | 'O'         | **Optimistic Lock** 설정 </br> → 여러 프로그램에서 추가 가능, 실제 DB 변경 시 Exclusive(E)로 승격 가능 |
 |                         | 'E' / 'V'   | **Exclusive (누적)** Lock 설정 → 데이터 변경용, 동일 프로그램에서만 추가 Lock 가능 |
 |                         | 'X' / 'U'   | **Exclusive (비누적)** Lock 설정 → 데이터 변경용, 동일 프로그램에서도 추가 Lock 불가 |
 |                         | 'R' / 'C'   | Optimistic(O) Lock을 Exclusive(E) Lock으로 **승격**하거나 승격 가능 여부 체크 |
