--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -37,10 +37,10 @@
 
 | Parameter / Mode        | Value        | Meaning |
 |-------------------------|-------------|---------|
-| mode_<table_name>       | 'S' / 'W'   | **Shared Lock** 설정 또는 Lock 가능 여부 체크 → 여러 프로그램에서 추가 Shared Lock 가능 |
+| mode_<table_name>       | 'S' / 'W'   | **Shared Lock** 설정 또는 Lock 가능 여부 체크 → </br> 여러 프로그램에서 추가 Shared Lock 가능 |
 |                         | 'O'         | **Optimistic Lock** 설정 </br> → 여러 프로그램에서 추가 가능, 실제 DB 변경 시 Exclusive(E)로 승격 가능 |
-|                         | 'E' / 'V'   | **Exclusive (누적)** Lock 설정 → 데이터 변경용, 동일 프로그램에서만 추가 Lock 가능 |
-|                         | 'X' / 'U'   | **Exclusive (비누적)** Lock 설정 → 데이터 변경용, 동일 프로그램에서도 추가 Lock 불가 |
+|                         | 'E' / 'V'   | **Exclusive (누적)** Lock 설정 → </br> 데이터 변경용, 동일 프로그램에서만 추가 Lock 가능 |
+|                         | 'X' / 'U'   | **Exclusive (비누적)** Lock 설정 → </br> 데이터 변경용, 동일 프로그램에서도 추가 Lock 불가 |
 |                         | 'R' / 'C'   | Optimistic(O) Lock을 Exclusive(E) Lock으로 **승격**하거나 승격 가능 여부 체크 |
 | <lock_parameter>        | <val>       | Lock Object에 정의된 키 필드 값 (Lock Argument 구성 요소) |
 | x_<lock_parameter>      | space       | 해당 Lock Parameter 값 기준으로 Lock 설정 (기본값) |
