Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -35,25 +35,6 @@
 - ABAP 구문으로 개발자가 직접 ROLLBACK 실행 : `ROLLBACK WORK`
 </br>
 
-| Parameter / Mode        | Value        | Meaning |
-|-------------------------|-------------|---------|
-| mode_<table_name>       | 'S' / 'W'   | **Shared Lock** 설정 또는 Lock 가능 여부 체크 → </br> 여러 프로그램에서 추가 Shared Lock 가능 |
-|                         | 'O'         | **Optimistic Lock** 설정 </br> → 여러 프로그램에서 추가 가능, 실제 DB 변경 시 Exclusive(E)로 승격 가능 |
-|                         | 'E' / 'V'   | **Exclusive (누적)** Lock 설정 → </br> 데이터 변경용, 동일 프로그램에서만 추가 Lock 가능 |
-|                         | 'X' / 'U'   | **Exclusive (비누적)** Lock 설정 → </br> 데이터 변경용, 동일 프로그램에서도 추가 Lock 불가 |
-|                         | 'R' / 'C'   | Optimistic(O) Lock을 Exclusive(E) Lock으로 **승격**하거나 승격 가능 여부 체크 |
-| <lock_parameter>        | <val>       | Lock Object에 정의된 키 필드 값 (Lock Argument 구성 요소) |
-| x_<lock_parameter>      | space       | 해당 Lock Parameter 값 기준으로 Lock 설정 (기본값) |
-|                         | 'X'         | 해당 필드 값이 Initial인 모든 레코드에 대해 Lock |
-| _scope                  | '1'         | Lock이 현재 프로그램 내에서만 유지 |
-|                         | '2'         | Lock을 V1 Update Task로 전달 (기본값) |
-|                         | '3'         | 프로그램 + V1 Update Task 모두에서 Lock 유지 |
-| _wait                   | space       | 외부 Lock 존재 시 대기 없이 즉시 실패 (기본값) |
-|                         | 'X'         | 외부 Lock 존재 시 한 번 더 Lock 시도 |
-| _collect                | space       | Lock Container 미사용, 즉시 Lock table에 반영 (기본값) |
-|                         | 'X'         | Lock Container 사용, 여러 Lock을 모아두었다가 FLUSH_ENQUEUE로 한 번에 반영 |
-
-</br>
 
 ```abap
 *************** 암묵적 COMMIT ****************
@@ -107,6 +88,27 @@ ENDIF.
 - 기존 Lock 존재 여부 확인 후 Lock 설정/승격 가능 여부 판단
 </br>
 
+- 같은 프로그램에서는 S·O·E Lock은 누적 가능하지만, X Lock이 있으면 추가 Lock은 불가능
+  
+| Parameter / Mode        | Value        | Meaning |
+|-------------------------|-------------|---------|
+| mode_<table_name>       | 'S' / 'W'   | **Shared Lock** 설정 또는 Lock 가능 여부 체크 → </br> 여러 프로그램에서 추가 Shared Lock 가능 |
+|                         | 'O'         | **Optimistic Lock** 설정 </br> → 여러 프로그램에서 추가 가능, 실제 DB 변경 시 Exclusive(E)로 승격 가능 |
+|                         | 'E' / 'V'   | **Exclusive (누적)** Lock 설정 → </br> 데이터 변경용, 동일 프로그램에서만 추가 Lock 가능 |
+|                         | 'X' / 'U'   | **Exclusive (비누적)** Lock 설정 → </br> 데이터 변경용, 동일 프로그램에서도 추가 Lock 불가 |
+|                         | 'R' / 'C'   | Optimistic(O) Lock을 Exclusive(E) Lock으로 **승격**하거나 승격 가능 여부 체크 |
+| <lock_parameter>        | <val>       | Lock Object에 정의된 키 필드 값 (Lock Argument 구성 요소) |
+| x_<lock_parameter>      | space       | 해당 Lock Parameter 값 기준으로 Lock 설정 (기본값) |
+|                         | 'X'         | 해당 필드 값이 Initial인 모든 레코드에 대해 Lock |
+| _scope                  | '1'         | Lock이 현재 프로그램 내에서만 유지 |
+|                         | '2'         | Lock을 V1 Update Task로 전달 (기본값) |
+|                         | '3'         | 프로그램 + V1 Update Task 모두에서 Lock 유지 |
+| _wait                   | space       | 외부 Lock 존재 시 대기 없이 즉시 실패 (기본값) |
+|                         | 'X'         | 외부 Lock 존재 시 한 번 더 Lock 시도 |
+| _collect                | space       | Lock Container 미사용, 즉시 Lock table에 반영 (기본값) |
+|                         | 'X'         | Lock Container 사용, 여러 Lock을 모아두었다가 FLUSH_ENQUEUE로 한 번에 반영 |
+
+</br>
 ```abap
 *************** LOCK 설정 (ENQUEUE) ****************
 CALL FUNCTION 'ENQUEUE_ESFLIGHT'
