Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -89,6 +89,7 @@ ENDIF.
 </br>
 
 - 같은 프로그램에서는 S·O·E Lock은 누적 가능하지만, X Lock이 있으면 추가 Lock은 불가능
+- Lock은 너무 일찍 잡거나 오래 유지하면 충돌과 성능 문제를 유발함
   
 | Parameter / Mode        | Value        | Meaning |
 |-------------------------|-------------|---------|
