Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -139,3 +139,38 @@ CALL FUNCTION 'DEQUEUE_ESFLIGHT'
     connid = lv_connid
     fldate = lv_fldate.
 ```
+```abap
+REPORT ZPROGB03_0034.
+
+CALL FUNCTION 'ENQUEUE_EZ_WORKB03'
+ EXPORTING
+   MODE_ZDBWORK_B03       = 'E'
+   MANDT                  = SY-MANDT
+   WORKNO                 = 1
+*   X_WORKNO               = ' '
+*   _SCOPE                 = '2'
+*   _WAIT                  = ' '
+*   _COLLECT               = ' '
+ EXCEPTIONS
+   FOREIGN_LOCK           = 1
+   SYSTEM_FAILURE         = 2
+   OTHERS                 = 3.
+IF sy-subrc <> 0.
+  WRITE: '실패'.
+  ELSE.
+    WRITE: '성공'.
+ENDIF.
+
+CALL FUNCTION 'DEQUEUE_EZ_WORKB03'
+ EXPORTING
+   MODE_ZDBWORK_B03       = 'E'
+   MANDT                  = SY-MANDT
+   WORKNO                 = 1
+*   X_WORKNO               = ' '
+*   _SCOPE                 = '3'
+*   _SYNCHRON              = ' '
+*   _COLLECT               = ' '
+.
+
+* CALL FUNCTION 'DEQUEUE_ALL'. " 모든 락 해제
+```
