Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -64,6 +64,42 @@ IF sy-subrc <> 0.
   ROLLBACK WORK.
 ENDIF.
 ```
+```abap
+REPORT ZPROGB03_0033.
+
+DATA: gt_scustom TYPE TABLE OF ZTSCUSTOM_B03,
+      gs_scustom TYPE ZTSCUSTOM_B03.
+
+DELETE FROM ZTSCUSTOM_B03.
+SELECT * FROM scustom
+  INTO TABLE gt_scustom
+  WHERE ID BETWEEN 1 AND 30.
+
+INSERT ZTSCUSTOM_B03 FROM TABLE gt_scustom.
+
+UPDATE ZTSCUSTOM_B03
+   SET name = 'First update~~~~~~'
+   WHERE ID = 3.
+
+COMMIT WORK. " LUW 종료되면서, 이전에 있던 변경사항이 DB에 반영됨
+
+UPDATE ZTSCUSTOM_B03  " 여기서부터 새로운 LUW 시작
+   SET name = 'Second update~~~~~'
+   WHERE ID = 2.
+
+UPDATE ZTSCUSTOM_B03
+   SET name = 'Third update~~~~~'
+   WHERE ID = 1.
+
+ROLLBACK WORK.  " 해당 LUW에 있던 변경사항들 다 취소됨
+
+IF sy-subrc = 0.
+  WRITE: '성공'.
+  ELSE.
+    WRITE: '실패'.
+ENDIF.
+```
+</br>
 </br>
 </br>
 
