Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -202,3 +202,7 @@ CALL FUNCTION 'DEQUEUE_EZ_WORKB03'
    WORKNO                 = 1.
 * CALL FUNCTION 'DEQUEUE_ALL'. " 모든 락 해제
 ```
+</br>
+
+<img width="503" height="220" alt="image" src="https://github.com/user-attachments/assets/d5d730e6-e767-445c-bbaf-8b2248ca9fc7" />
+
