Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -223,3 +223,8 @@ CALL FUNCTION 'DEQUEUE_EZ_WORKB03'
 </br>
 
 <img width="375" height="107" alt="image" src="https://github.com/user-attachments/assets/80c173bf-0a89-41ce-bbb6-4760e0c5bdf1" />
+</br>
+</br>
+
+- `SM12` : 현재 시스템에 설정된 Lock 정보 조회
+<img width="438" height="221" alt="image" src="https://github.com/user-attachments/assets/97d9e619-3dc2-4e53-acf9-0f313801c7b4" />
