--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -175,6 +175,7 @@ CALL FUNCTION 'DEQUEUE_ESFLIGHT'
     connid = lv_connid
     fldate = lv_fldate.
 ```
+- 같은 창에서는 이미 Lock을 잡고 있어서 성공하고, 다른 창에서는 해당 Lock이 선점되어 있어 FOREIGN_LOCK으로 실패함
 ```abap
 REPORT ZPROGB03_0034.
 
