Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -65,7 +65,7 @@ IF sy-subrc <> 0.
 ENDIF.
 ```
 ```abap
-REPORT ZPROGB03_0033.
+REPORT ZPROGB03_0034.
 
 DATA: gt_scustom TYPE TABLE OF ZTSCUSTOM_B03,
       gs_scustom TYPE ZTSCUSTOM_B03.
@@ -229,3 +229,21 @@ CALL FUNCTION 'DEQUEUE_EZ_WORKB03'
 
 - `SM12` : 현재 시스템에 설정된 Lock 정보 조회
 <img width="467" height="236" alt="image" src="https://github.com/user-attachments/assets/e55af051-0840-4e6f-8561-cabdee10e5b3" />
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+
+### 3) PERFORM ON COMMIT
+- COMMIT WORK가 실행된 뒤 등록된 FORM들을 시스템 테이블에 쌓아두었다가 순서대로 실행
+- 실행 시점은 DB COMMIT 이후이므로, FORM 안에서 에러(MESSAGE A/X)가 발생해도 이미 저장된 DB 변경은 되돌릴 수 없음
+```abap
+PERFORM x ON COMMIT.
+PERFORM y ON COMMIT.
+COMMIT WORK.
+→ x 실행
+→ y 실행
+→ DB Commit 완료 (되돌릴 수 없음)
+```
