Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -248,3 +248,53 @@ COMMIT WORK.
 → y 실행
 → DB Commit 완료 (되돌릴 수 없음)
 ```
+```abap
+REPORT ZPROGB03_0034.
+
+DATA: gt_scustom TYPE TABLE OF ZTSCUSTOM_B03,
+      gs_scustom TYPE ZTSCUSTOM_B03.
+
+DELETE FROM ZTSCUSTOM_B03.
+SELECT *
+  FROM scustom
+  INTO TABLE gt_scustom
+  WHERE id BETWEEN 1 AND 30.
+INSERT ZTSCUSTOM_B03 FROM TABLE gt_scustom.
+
+PERFORM update_1 ON COMMIT. " 커밋 대기
+PERFORM update_2 ON COMMIT.
+
+COMMIT WORK.
+
+*&---------------------------------------------------------------------*
+
+FORM update_1 .
+  LOOP AT gt_scustom INTO gs_scustom.
+    gs_scustom-name = 'Hone GIldong~~~~22'.
+    MODIFY gt_scustom FROM gs_scustom.
+  ENDLOOP.
+
+  MODIFY ZTSCUSTOM_B03 FROM TABLE gt_scustom.
+  IF sy-subrc = 0.
+    WRITE: 'update 1번 성공'.
+  ELSE.
+    MESSAGE 'update 1번 실패' TYPE 'A'. " 롤백
+  ENDIF.
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM update_2 .
+  READ TABLE gt_scustom INTO gs_scustom INDEX 10.
+  gs_scustom-name = 'Hong Gildong~~~~~'.
+  UPDATE ZTSCUSTOM_B03
+     SET name = gs_scustom-name
+   WHERE id = gs_scustom-id.
+
+  IF sy-subrc = 0.
+    WRITE: 'Update 2번 성공'.
+  ELSE.
+    MESSAGE 'Update 2번 실패' TYPE 'A'.
+  ENDIF.
+ENDFORM.
+```
