Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -169,7 +169,31 @@ ENDFORM.
 </br>
 </br>
 
-### 3) Lock (SE11, SM12)
+### 3) pdate Module (업데이트 모듈)
+- `CALL FUNCTION … IN UPDATE TASK` 로 등록된 후 COMMIT WORK 시점에 별도 Update Work Process에서 실행되는 DB 전용 Function Module
+- IMPORTING 파라미터만 사용하며, DB 변경 중 오류(MESSAGE A/X) 발생 시 해당 Update LUW 전체가 롤백되고 즉시 종료됨
+```abap
+******** Dialog Program ********
+CALL FUNCTION 'F1' IN UPDATE TASK EXPORTING p1 = a.
+CALL FUNCTION 'F2' IN UPDATE TASK EXPORTING q1 = b.
+CALL FUNCTION 'F3' IN UPDATE TASK EXPORTING s1 = a.
+COMMIT WORK.   " Update Task 실행 시작
+
+******** Update Module ********
+FUNCTION F1.
+  UPDATE ztable.
+     SET field = p1
+  IF sy-subrc <> 0.
+    MESSAGE 'Error' TYPE 'A'.   " Update LUW 롤백
+  ENDIF.
+ENDFUNCTION.
+```
+
+</br>
+</br>
+</br>
+
+### 4) Lock (SE11, SM12)
 - 다른 사용자가 같은 데이터를 동시에 수정하지 못하게 막는 장치
 - Lock Object 이름은 EY 또는 EZ로 시작해야 함
 - `SM12` 에서는 현재 설정된 Lock 정보를 확인 가능
