Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -169,7 +169,7 @@ ENDFORM.
 </br>
 </br>
 
-### 3) pdate Module (업데이트 모듈)
+### 3) Update Module (업데이트 모듈)
 - `CALL FUNCTION … IN UPDATE TASK` 로 등록된 후 COMMIT WORK 시점에 별도 Update Work Process에서 실행되는 DB 전용 Function Module
 - IMPORTING 파라미터만 사용하며, DB 변경 중 오류(MESSAGE A/X) 발생 시 해당 Update LUW 전체가 롤백되고 즉시 종료됨
 ```abap
