Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -172,6 +172,17 @@ ENDFORM.
 ### 3) Update Module (업데이트 모듈)
 - `CALL FUNCTION … IN UPDATE TASK` 로 등록된 후 COMMIT WORK 시점에 별도 Update Work Process에서 실행되는 DB 전용 Function Module
 - IMPORTING 파라미터만 사용하며, DB 변경 중 오류(MESSAGE A/X) 발생 시 해당 Update LUW 전체가 롤백되고 즉시 종료됨
+</br>
+
+**1) 비동기 Update**
+- `COMMIT WORK` 시 실제 DB 저장은 나중에 `Update Work Process` 가 따로 처리하고, 프로그램은 먼저 종료되는 방식
+  
+**2) 동기 Update**
+- `COMMIT WORK AND WAIT` 를 사용해 Update 작업이 DB에 끝날 때까지 기다린 후 다음 로직(LUW 2)으로 넘어가는 방식
+  
+**3) Local Update**
+- SET UPDATE TASK LOCAL로 Update Task를 같은 워크프로세스에서 즉시 실행해, 별도 Update Work Process 없이 현재 LUW 안에서 DB 반영되는 방식
+  
 ```abap
 ******** Dialog Program ********
 CALL FUNCTION 'F1' IN UPDATE TASK EXPORTING p1 = a.
