Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -204,11 +204,16 @@ ENDFUNCTION.
 </br>
 </br>
 
-<img width="459" height="253" alt="image" src="https://github.com/user-attachments/assets/89cbe3f9-c7aa-440d-acc1-9368c93e61de" />
+- `SE37` 로 확인 가능
+<img width="489" height="270" alt="image" src="https://github.com/user-attachments/assets/cdc3eb43-91f7-4d3b-b09c-f00066d31b74" />
+</br>
+</br>
 
+- Importing 파라미터만 받음
+<img width="486" height="121" alt="image" src="https://github.com/user-attachments/assets/d0192e24-aa8a-40ee-988b-f09a9e39f165" />
 
-
-
+</br>
+</br>
 </br>
 </br>
 </br>
