Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -10,7 +10,7 @@
 
 </br>
 
-## < ABAP 데이터 무결성 제어 : COMMIT / ROLLBACK / Lock >
+## < ABAP LUW 기반 DB 처리 흐름 정리 >
 </br>
 
 ### 1) COMMIT / ROLLBACK 구분 정리
@@ -350,3 +350,9 @@ CALL FUNCTION 'DEQUEUE_EZ_WORKB03'
 </br>
 </br>
 </br>
+
+---
+
+</br>
+
+## < ABAP LUW 기반 DB 처리 흐름 정리 >
