--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -359,3 +359,12 @@ CALL FUNCTION 'DEQUEUE_EZ_WORKB03'
 - V1 Update는 즉시 실행되는 필수 DB 변경이며, V2 Update는 지연 실행되는 부가 작업임
 - Lock은 V1 Update가 끝나면 자동 해제되고, V2 Update는 그 이후에 실행되며 Lock과는 무관함
 - PERFORM ON COMMIT은 V1 Update가 끝난 뒤 DB COMMIT 직전에 자동 실행됨
+</br>
+
+**1) CALL FUNCTION / CALL METHOD**
+```abap
+CALL FUNCTION 'X'.
+CALL METHOD lo_obj->method.
+```
+**2) SUBMIT … AND RETURN / CALL TRANSACTION**
+**3) SUBMIT / LEAVE TO TRANSACTION**
