Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -361,10 +361,34 @@ CALL FUNCTION 'DEQUEUE_EZ_WORKB03'
 - PERFORM ON COMMIT은 V1 Update가 끝난 뒤 DB COMMIT 직전에 자동 실행됨
 </br>
 
-**1) CALL FUNCTION / CALL METHOD**
+### 1) CALL TRANSACTION
+- `MODE 'A'` : 모든 화면 표시 (디버깅용)
+- `MODE 'N'` : 화면 없이 백그라운드 실행
+- `MODE 'E'` : 오류 발생 시에만 화면 표시
+- `UPDATE 'S'` : 동기 Update, COMMIT 끝날 때까지 대기
+- `UPDATE 'A'` : 비동기 Update, COMMIT 후 바로 진행
 ```abap
-CALL FUNCTION 'X'.
-CALL METHOD lo_obj->method.
+CALL TRANSACTION '<T_CODE>'
+  USING <BDC_ITAB>
+  MODE   '<A/N/E>'
+  UPDATE '<S/A>'.
 ```
-**2) SUBMIT … AND RETURN / CALL TRANSACTION**
-**3) SUBMIT / LEAVE TO TRANSACTION**
+```abap
+" 화면 모두 표시
+CALL TRANSACTION 'T1'
+  USING bdc_itab
+  MODE 'A'      " 모든 화면 표시
+  UPDATE 'S'.   " 동기 Update (완료까지 대기)
+
+" 화면 없이 실행
+CALL TRANSACTION 'T2'
+  USING bdc_itab
+  MODE 'N'      " 백그라운드 실행
+  UPDATE 'A'.   " 비동기 Update (대기 없음)
+
+" 오류 시에만 화면 표시
+CALL TRANSACTION 'T3'
+  USING bdc_itab
+  MODE 'E'      " 오류 발생 시 화면 표시
+  UPDATE 'S'.   " 동기 Update
+```
