Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -367,6 +367,13 @@ CALL FUNCTION 'DEQUEUE_EZ_WORKB03'
 - `MODE 'E'` : 오류 발생 시에만 화면 표시
 - `UPDATE 'S'` : 동기 Update, COMMIT 끝날 때까지 대기
 - `UPDATE 'A'` : 비동기 Update, COMMIT 후 바로 진행
+
+| 호출 방식 | Data 공유 | SAP LUW | 언제 사용? |
+|----------|-----------|---------|------------|
+| CALL FUNCTION<br>CALL METHOD | 분리됨 | 동일 | 같은 LUW 안에서 조회 / 변경 |
+| SUBMIT AND RETURN<br>CALL TRANSACTION | 분리됨 | 분리됨 | 다른 LUW에서 조회 / 변경 |
+| CALL FUNCTION<br>STARTING NEW TASK | 분리됨 | 분리됨 | 병렬 처리 (Parallel Task) |
+
 ```abap
 CALL TRANSACTION '<T_CODE>'
   USING <BDC_ITAB>
