Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -11,6 +11,9 @@
 </br>
 
 ## < ABAP LUW 기반 DB 처리 흐름 정리 >
+- V1 Update는 즉시 실행되는 필수 DB 변경이며, V2 Update는 지연 실행되는 부가 작업임
+- Lock은 V1 Update가 끝나면 자동 해제되고, V2 Update는 그 이후에 실행되며 Lock과는 무관함
+- PERFORM ON COMMIT은 V1 Update가 끝난 뒤 DB COMMIT 직전에 자동 실행됨
 </br>
 
 ### 1) COMMIT / ROLLBACK 구분 정리
@@ -349,19 +352,8 @@ CALL FUNCTION 'DEQUEUE_EZ_WORKB03'
 </br>
 </br>
 </br>
-</br>
 
----
-
-</br>
-
-## < Lock 해제 기준과 V1·V2 Update 흐름 >
-- V1 Update는 즉시 실행되는 필수 DB 변경이며, V2 Update는 지연 실행되는 부가 작업임
-- Lock은 V1 Update가 끝나면 자동 해제되고, V2 Update는 그 이후에 실행되며 Lock과는 무관함
-- PERFORM ON COMMIT은 V1 Update가 끝난 뒤 DB COMMIT 직전에 자동 실행됨
-</br>
-
-### 1) CALL TRANSACTION
+### 5) CALL TRANSACTION MODE·UPDATE 및 호출 방식 요약
 - `MODE 'A'` : 모든 화면 표시 (디버깅용)
 - `MODE 'N'` : 화면 없이 백그라운드 실행
 - `MODE 'E'` : 오류 발생 시에만 화면 표시
@@ -399,3 +391,13 @@ CALL TRANSACTION 'T3'
   MODE 'E'      " 오류 발생 시 화면 표시
   UPDATE 'S'.   " 동기 Update
 ```
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
+## < V1/V2 Update 처리 흐름과 Lock 해제 기준 >
+
