--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -399,5 +399,6 @@ CALL TRANSACTION 'T3'
 
 </br>
 
-## < V1/V2 Update 처리 흐름과 Lock 해제 기준 >
-
+## < Number Range (TCODE: `SNRO`) >
+- 번호 범위는 From~To로 정의되며, 서로 겹칠 수 없음
+- Ext 체크 여부로 내부 번호 부여 / 외부 번호 부여를 결정함
