Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -401,4 +401,4 @@ CALL TRANSACTION 'T3'
 
 ## < Number Range (TCODE: `SNRO`) >
 - 번호 범위는 From~To로 정의되며, 서로 겹칠 수 없음
-- Ext 체크 여부로 내부 번호 부여 / 외부 번호 부여를 결정함
+- Ext 체크 여부로 내부 번호 (시스템 자동 증가) 부여 / 외부 번호 (사용자 입력) 부여를 결정함
