--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -404,3 +404,12 @@ CALL TRANSACTION 'T3'
 - Ext 체크 여부로 내부 번호 (시스템 자동 증가) 부여 / 외부 번호 (사용자 입력) 부여를 결정함
 - 같은 번호라도 Subobject가 다르면 중복 사용 가능
 - 그룹 테이블로 분류값을 지정해, 특정 종류별로 다른 번호 범위를 사용하도록 구성 가능
+</br>
+
+- Number Range Object는 고객용이므로 이름을 `Z` 또는 `Y` 로 시작해야 함
+- Number Length Domain은 Number Range Object 생성 시 필수값
+- Number Range의 길이는 도메인에서 `NUMC` 또는 `CHAR` 타입으로 정의하며 최대 20자리까지 가능
+- `% Warning` 은 번호 범위 사용률이 `0.1~99.9%` 에 도달하면 경고를 주는 기준이며, 보통 10.0으로 설정함
+- `No rolling` 은 번호 범위를 다 써도 다시 처음으로 돌아가지 않고 더 이상 번호를 부여하지 않는 설정
+
+<img width="508" height="316" alt="image" src="https://github.com/user-attachments/assets/dbcfea6c-aab7-424f-968d-1c70d07578c4" />
