Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -412,3 +412,59 @@ CALL TRANSACTION 'T3'
 - `No rolling` 은 번호 범위를 다 써도 다시 처음으로 돌아가지 않고 더 이상 번호를 부여하지 않는 설정
 
 <img width="508" height="316" alt="image" src="https://github.com/user-attachments/assets/dbcfea6c-aab7-424f-968d-1c70d07578c4" />
+</br>
+</br>
+
+```abap
+*************** Number Range 정보 조회 ****************
+CALL FUNCTION 'NUMBER_GET_INFO'
+  EXPORTING
+    nr_range_nr = <number_range_number>      " Number Range Interval
+    object      = <number_range_object_name> " Number Range Object
+    subobject   = <number_range_sub_object>  " Subobject (옵션)
+    toyear      = <to_fiscal_year>           " 회계연도 (옵션)
+  IMPORTING
+    interval    = <interval_info>             " Interval 정보
+    NRIV        = <internal_info_table>       " 내부 관리 정보 테이블
+  EXCEPTIONS
+    interval_not_found = 1
+    object_not_found  = 2.
+
+*************** Number Range 다음 번호 채번 ****************
+CALL FUNCTION 'NUMBER_GET_NEXT'
+  EXPORTING
+    nr_range_nr   = <number_range_number>       " Number Range Interval 번호
+    object        = <number_range_object_name>  " Number Range Object
+    quantity      = <quantity_of_numbers>       " 요청할 번호 개수 (보통 1)
+    subobject     = <number_range_sub_object>   " Subobject (옵션)
+    toyear        = <to_fiscal_year>             " 회계연도 기준 (옵션)
+    ignore_buffer = <ignore_buffer_flag>        " 버퍼 무시 여부
+  IMPORTING
+    number        = <next_free_number>           " 할당된 다음 번호
+    quantity      = <quantity_of_numbers_read>  " 실제 할당된 개수
+    returncode    = <return_code>                " 처리 결과 코드
+  EXCEPTIONS
+    interval_not_found       = 1
+    number_range_not_intern  = 2
+    object_not_found         = 3
+    quantity_is_0            = 4
+    quantity_is_not_1        = 5
+    interval_overflow        = 6
+    buffer_overflow          = 7.
+
+*************** External Number Range 값 검증 ****************
+CALL FUNCTION 'NUMBER_CHECK'
+  EXPORTING
+    nr_range_nr   = <number_range_number>        " Number Range Interval 번호
+    number        = <number_to_be_checked>       " 사용자가 입력한 번호
+    object        = <number_range_object_name>   " Number Range Object
+    subobject     = <number_range_sub_object>    " Subobject (옵션)
+    toyear        = <to_fiscal_year>              " 회계연도 기준 (옵션)
+    numeric_check = <numeric_check_flag>         " 숫자 여부 체크
+  IMPORTING
+    returncode    = <return_code>                 " space: 사용 가능 / 'X': 사용 불가
+  EXCEPTIONS
+    interval_not_found      = 1
+    number_range_not_extern = 2
+    object_not_found        = 3.
+```
